added dbcontext and models

--- a/ZambiaTourismAPI/appsettings.json
+++ b/ZambiaTourismAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "TourismSiteConnectionString": "Server=localhost;Database=ZambiaTourismSites;Trusted_Connection=True;TrustServerCertificate=true"
+  }
 }
